# llama-cpp-rs

./: .gitmodules  Cargo.toml  README.md
data/: README.md  TinyLLama-v0.gguf
examples/emoji-grammar/: Cargo.toml
examples/emoji-grammar/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
llama-cpp/: Cargo.toml
llama-cpp-cli/: Cargo.toml
llama-cpp-cli/src/: main.rs
llama-cpp-server/: Cargo.toml
llama-cpp-server/src/: api.rs  main.rs
llama-cpp-sys/: Cargo.toml  build.rs  wrapper.h
llama-cpp-sys/src/: lib.rs
llama-cpp/src/: error.rs  inference.rs  lib.rs  loader.rs  session.rs  token.rs  utils.rs
llama-cpp/src/async_rt/: async_std_rt.rs  mod.rs  shared.rs  tokio_rt.rs
llama-cpp/src/backend/: batch.rs  context.rs  grammar.rs  inference.rs  mod.rs  model.rs  quantization.rs  sampling.rs
llama-cpp/src/grammar/: ast.rs  compiler.rs  mod.rs  parser.rs
