[package]
name = "llama-cpp-cli"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
color-eyre = "0.6"
tokio = { version = "1.33", features = ["rt-multi-thread", "macros"] }
structopt = "0.3"

[dependencies.llama-cpp]
version = "0.1.0"
path = "../llama-cpp"
