[package]
name = "llama-cpp-sys"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
links = "llama"
description = "llama.cpp FFI bindings for Rust"
repository = "https://github.com/jgraef/llama-cpp-rs"
homepage = "https://github.com/jgraef/llama-cpp-rs"
# todo: add this once it's on docs.rs
# documentation = ""
keywords = ["llm", "ai"]
categories = ["external-ffi-bindings", "science", "text-processing"]
readme = "../README.md"
license = "MIT"

[dependencies]

[build-dependencies]
bindgen = "0.68.1"
cmake = "0.1"

[features]
default = []
