[package]
name = "llama-cpp"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]

[dependencies]
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1.33", features = ["rt", "sync", "macros"] }
num_cpus = "1.16"
lazy_static = "1.4"
itertools = "0.11"

[dependencies.llama-cpp-sys]
version = "0.1.0"
path = "../llama-cpp-sys"
