[package]
name = "llama-cpp"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
description = "llama.cpp bindings for Rust"
repository = "https://github.com/jgraef/llama-cpp-rs"
homepage = "https://github.com/jgraef/llama-cpp-rs"
# todo: add this once it's on docs.rs
# documentation = ""
keywords = ["api", "llm", "ai"]
categories = ["api-bindings", "science", "text-processing"]
readme = "../README.md"
license = "MIT"

[dependencies]
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1.33", features = ["rt", "sync", "macros"] }
num_cpus = "1.16"
lazy_static = "1.4"
itertools = "0.11"
derivative = "2.2"
futures = "0.3"
nom = "7.1"
derive_more = "0.99"

[dependencies.llama-cpp-sys]
version = "0.1.0"
path = "../llama-cpp-sys"
