[package]
name = "llama-cpp"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
description = "llama.cpp bindings for Rust"
repository = "https://github.com/jgraef/llama-cpp-rs"
homepage = "https://github.com/jgraef/llama-cpp-rs"
# todo: add this once it's on docs.rs
# documentation = ""
keywords = ["api", "llm", "ai"]
categories = ["api-bindings", "science", "text-processing"]
readme = "../README.md"
license = "MIT"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]


#### Dependencies

[dependencies]
tracing = "0.1"
thiserror = "1.0"
num_cpus = "1.16"
itertools = "0.11"
derivative = "2.2"
futures = { version = "0.3", optional = true }
nom = { version = "7.1", optional = true }
derive_more = "0.99"
cfg-if = { version = "1.0", optional = true }

#### FFI bindings

[dependencies.llama-cpp-sys]
version = "0.1.0"
path = "../llama-cpp-sys"

#### Tokio runtime

[dependencies.tokio]
version = "1.33"
features = ["rt", "sync", "macros"]
optional = true

#### async-std runtime

[dependencies.async-std]
version = "1.12"
optional = true

[dependencies.async-watch]
version = "0.3"
optional = true


#### Features

[features]
# TODO: remove default features, and tell docsrs to build with tokio enabled?
default = ["async", "grammar"]
async = ["dep:futures", "cfg-if"]
grammar = ["dep:nom"]
runtime-tokio = ["dep:tokio", "async"]
runtime-async-std = ["dep:async-std", "dep:async-watch", "async"]
