[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
color-eyre = "0.6"
tokio = { version = "1.33", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[dependencies.llama-cpp]
version = "0.1.0"
path = "../../llama-cpp"
features = ["runtime-tokio"]
